# Producer-Consumer-Problem

./: README.md
C++/: CMakeLists.txt
C++/include/: consumer.hpp  message.hpp  message_buffer.hpp  producer.hpp
C++/src/: consumer.cpp  main.cpp  message_buffer.cpp  producer.cpp
Go/: go.mod  main.go
Java/src/com/prodcons/: Consumer.java  Main.java  Message.java  MessageBuffer.java  Producer.java
Python/: consumer.py  main.py  message.py  message_buffer.py  producer.py
